--- a/content/collections/pages.yaml
+++ b/content/collections/pages.yaml
@@ -9,5 +9,9 @@ layout: layout
 revisions: false
 route: '{parent_uri}/{slug}'
 sort_dir: asc
+preview_targets:
+  -
+    label: Entry
+    url: '{permalink}'
 structure:
   root: true
